--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -13,7 +13,7 @@
 {% else %}
 {{ back_btn(PORTAL,'Home') }}
 {% endif %}
-<div style="width:45%">
+<div class="profile-header">
     <h4 class="tnth-headline">
     {% if providerPerspective == 'true' %}
         Patient #{{ user.id}} - {{ user.username }}
