--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -8,7 +8,7 @@
 
     <div class="row" style="position: relative;">
         <div class="col-md-12">
-            <h4 class="tnth-headline left-indent">New User</h4>
+            <h4 class="tnth-headline left-indent-top">New User</h4>
             <div class="profile-item-container create-account-container">
                 {{profileName(False)}}
                 {{profileBirthDate(False)}}
@@ -19,7 +19,7 @@
                 {{profileSaveBtn()}}
             </div>
             <br/>
-            <div class="left-indent">
+            <div class="left-indent-bottom">
                 {{ back_btn('patients','Patients List')}}
                 <a href="javascript:void()" style="visibility:hidden" id="profileBackLink"></a>
             </div>
