--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -473,8 +473,12 @@ input.clinic {
   padding: 3.5em 4em;
   width: 90%;
 }
-.left-indent {
-  margin-left: 3em;
+.left-indent-bottom {
+  margin-left: 3.2em;
+}
+
+.left-indent-top {
+  margin-left: 2.5em;
 }
 
 #btnProfileSendEmail {
