--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -59,7 +59,7 @@ body {
 }
 
 #mainDiv {
-  margin-top: 22px;
+  /*margin-top: 22px;*/
 }
 
 a {
@@ -518,7 +518,7 @@ input.clinic {
   padding: 0.5em;
 }
 
-.profiler-header {
+.profile-header {
   width:45%
 }
 
@@ -613,6 +613,12 @@ input.clinic {
   margin-top:6px;
 }
 
+div.modal-header, div.modal-footer {
+  background-color:#79815D; 
+  color: #FFF;
+}
+
+
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -639,10 +645,16 @@ input.clinic {
   }
 }
 
-@media (max-width: 630px) {
-  body, .form-control, input, select, h4 {
+@media (max-width: 640px) {
+  body,
+  .form-control,
+  input,
+  select,
+  h4,
+  label,
+  .tnth-form .form-group > label {
     font-size: 13px;
-  }
+  } 
   #userSessionsList {
     font-size: 0.85em
   }
@@ -779,9 +791,9 @@ input.clinic {
     margin: -1em 0 1.5em;
   }
   .profile-img {
-    margin-top: -100px;
+    margin-top: -90px;
     img {
-      width: 100px;
+      width: 90px;
       border-radius: 60px;
     }
   }
