fix banner disppearing issue in Firefox

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -54,7 +54,7 @@ body {
 }
 // Hide the actual div that holds nav. This is to avoid flash of unstyled content. .show() on load of nav.
 #tnthNavWrapper {
-  display: none;
+  display: block;
   visibility: hidden;
 }
 
