--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -54,7 +54,7 @@ body {
 }
 // Hide the actual div that holds nav. This is to avoid flash of unstyled content. .show() on load of nav.
 #tnthNavWrapper {
-  display: none;
+  display: block;
   visibility: hidden;
 }
 
@@ -655,11 +655,41 @@ div.modal-header, div.modal-footer {
   .tnth-form .form-group > label {
     font-size: 13px;
   } 
+
+  #profileForm #month {
+    font-size: 12px;
+    width: 8.3em;
+  }
+
+  #profileForm #date, #profileForm #year {
+    position: relative;
+    left: 1px;
+  }
+
   #userSessionsList {
     font-size: 0.85em
   }
   .profile-item-container {
-    overflow-y:auto
+    overflow-y:auto;
+    padding: 0.3em;
+  }
+  .side {
+  height: 27em;
+  }
+  #phone {
+    width: 190px;
+  }
+  #date {
+    position: relative;
+    left: -14px;
+  }
+  #year {
+    position: relative;
+    width:5em;
+    left: -28px;
+  }
+  .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
+    margin-top:2px;
   }
 }
 
