--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -666,6 +666,15 @@ div.modal-header, div.modal-footer {
     left: 1px;
   }
 
+  #profileCreateForm select {
+  width: 9em;
+  }
+
+  #profileCreateForm #date, #profileCreateForm #year {
+    position: relative;
+    left: 12px;
+  }
+
   #userSessionsList {
     font-size: 0.85em
   }
