--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -33,11 +33,9 @@ body {
   height: 71px;
 }
 #tnthNavWrapper {
-  display: block;
+  /*display: none;*/
+  display:block;
   visibility: hidden;
-}
-#mainDiv {
-  /*margin-top: 22px;*/
 }
 a {
   color: #57675B;
@@ -548,6 +546,7 @@ div.modal-footer {
   background-color: #79815D;
   color: #FFF;
 }
+
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -567,11 +566,6 @@ div.modal-footer {
     margin-bottom: 0;
   }
 }
-@media (max-width: 730) {
-  #userSessionsList {
-    font-size: 0.9em;
-  }
-}
 @media (max-width: 640px) {
   body,
   .form-control,
@@ -582,50 +576,36 @@ div.modal-footer {
   .tnth-form .form-group > label {
     font-size: 13px;
   }
-  #profileForm #month {
-    font-size: 12px;
-    width: 8.3em;
-  }
-  #profileForm #date,
-  #profileForm #year {
-    position: relative;
-    left: 1px;
-  }
-  #profileCreateForm select {
-    width: 9em;
-  }
-  #profileCreateForm #date,
-  #profileCreateForm #year {
-    position: relative;
-    left: 12px;
-  }
+
   #userSessionsList {
     font-size: 0.85em;
   }
   .profile-item-container {
     overflow-y: auto;
-    padding: 0.3em;
+    padding: 1em;
   }
   .side {
     height: 27em;
   }
-  #phone {
-    width: 190px;
+  #phone, #email {
+    width: 95%;
+    max-width: 95%;
   }
-  #date {
-    position: relative;
-    left: -14px;
-  }
-  #year {
-    position: relative;
-    width: 5em;
-    left: -28px;
+
+  .form-control {
+    height: 34px;
+    margin: 4px auto;
   }
   .checkbox input[type=checkbox],
   .checkbox-inline input[type=checkbox],
   .radio input[type=radio],
   .radio-inline input[type=radio] {
     margin-top: 2px;
+  }
+}
+@media (max-width: 730) {
+  #userSessionsList {
+    font-size: 0.9em;
   }
 }
 @media (min-width: 768px) {
