tou style fixes and add support polyfill code for Promise (e.g.IE)

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -444,6 +444,13 @@ input.clinic {
 #userAssessementReport table {
   word-break: break-all;
 }
+
+#termsText {
+  padding: 1.5em 2em;
+}
+#agreeLabel {
+  margin-left: 2em;
+}
 .create-user-link {
   border-radius: 4px;
   color: #57675B;
