--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -507,6 +507,13 @@ input.clinic {
   word-break:break-all;
 }
 
+#termsText {
+  padding: 1.5em 2em;
+}
+#agreeLabel {
+  margin-left: 2em;
+}
+
 .create-user-link {
   border-radius:4px;
   color: @linkColor;
