--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -36,6 +36,8 @@ body {
   /*display: none;*/
   display:block;
   visibility: hidden;
+  -webkit-transition: visibility 0.5s ease-in;
+  transition: visibility 0.5s ease-in;
 }
 a {
   color: #57675B;
@@ -737,7 +739,7 @@ div.modal-footer {
     margin-top: -70px;
   }
   .profile-img img {
-    width: 80px;
+    width: 60px;
     border-radius: 60px;
   }
   .btn-set {
