--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block main %}
-
-<div class="reduce-font-sizes">
+<div id="patientList" class="reduce-font-sizes">
 
 <h3 class="tnth-headline">Patient List</h3>
 
