--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -3,9 +3,9 @@
 {% from "flask_user/_macros.html" import back_btn %}
 {% from "profile_macros.html" import profile, profileSaveBtn, profileImage %}
 
-<div id="loadingIndicator" class="loading-indicator">
+<!-- <div id="loadingIndicator" class="loading-indicator">
     <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
-</div>
+</div> -->
 <br/>
 {% if providerPerspective == 'true' %}
 {{ back_btn('patients','Patients List') }}
