--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.rowlink.js') }}"></script>
-
 </head>
 
 {# sets container to full-width #}
@@ -39,6 +38,9 @@
 {% endif %}
 
 <body>
+    <div id="loadingIndicator" class="loading-indicator">
+        <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
+    </div>
     {# portal_wrapper loads in mainNav here. Hide completely on splashView pages #}
     <div id="mainNav" {% if splashView %}class="hidden"{% endif %}>
     </div>
